--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-
+Debug/
+x64/
 Project_Extrinsic_Cam_lidar/.vs/Project1/v16/.suo
 Project_Extrinsic_Cam_lidar/.vs/Project1/v16/Browse.VC.db
 Project_Extrinsic_Cam_lidar/.vs/Project1/v16/ipch/AutoPCH/6560d42e18ef9df/FEATURE_IMG.ipch
@@ -17,7 +18,6 @@ Project_Extrinsic_Cam_lidar/Debug/Project1.tlog/Project1.lastbuildstate
 Project_Extrinsic_Cam_lidar/Debug/Project1.tlog/unsuccessfulbuild
 Project_Extrinsic_Cam_lidar/Debug/vc142.idb
 Project_Extrinsic_Cam_lidar/Debug/vc142.pdb
-Project_Extrinsic_Cam_lidar/feature_img.cpp
 Project_Extrinsic_Cam_lidar/Project1.sln
 Project_Extrinsic_Cam_lidar/Project1.vcxproj
 Project_Extrinsic_Cam_lidar/Project1.vcxproj.filters
